--- a/Desktop/Final project/webpack-static-template-ru-main/src/index.html
+++ b/Desktop/Final project/webpack-static-template-ru-main/src/index.html
@@ -337,7 +337,7 @@
                                     <span class="button__text--order">
                                         Заказать
                                     </span>
-                                     <span class="order__arrow">></span>
+                                     <div class="button--order__arrow"></div>
                                 </button>
                             </div>
                         </div>
@@ -412,7 +412,7 @@
                 Стоимость ремонта указана на единичную услугу.
                 Для получения коммерческого предложения на постоянное обслуживание, оставьте заявку.
             </p>
-            button.
+            <button class="down-container__button">Получить комерческое придложение</button>
         </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
